--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
             <a href="#"><h1>Feedr</h1></a>
             <nav>
               <ul>
-                <li><a href="#">News Source: <span>Source Name</span></a>
+                <li><a href="#">News Source: <span>Reddit</span></a>
                   <ul>
-                      <li><a href="#">Source 1</a></li>
-                      <li><a href="#">Source 2</a></li>
-                      <li><a href="#">Source 3</a></li>
+                      <li><a href="#" id="search-reddit">Reddit</a></li>
+                      <li><a href="#" id="search-digg">Digg</a></li>
                   </ul>
                 </li>
               </ul>
@@ -46,7 +45,7 @@
             <p>
               Article description/content here.
             </p>
-            <a href="#" class="popUpAction" target="_blank">Read more on Reddit</a>
+            <a href="#" class="popUpAction" target="_blank">Read more from source/a>
           </div>
         </div>
         <section id="main" class="container">
